samples/_failures_safe/1761481996_fa55a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a8f103f.c: In function ‘main’:
./samples/SAFE/__tmp_7a8f103f.c:181:16: error: expected ‘)’ at end of input
  181 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_7a8f103f.c:181:5: error: expected declaration or statement at end of input
  181 |     if (len > 0
      |     ^~
